--- a/NO.10 CYGF/css/style.css
+++ b/NO.10 CYGF/css/style.css
@@ -23,7 +23,7 @@ body {
   position: absolute;
   top: 10%;
   left: 50%;
-  -webkit-transform: translate(-90px, -50%);
+  -webkit-transform: translate(-90px, -50%); 
           transform: translate(-90px, -50%);
 }
 
@@ -36,7 +36,7 @@ h2 {
   text-align: center;
   font-family: 'Luckiest Guy', cursive;
   line-height: 1;
-  white-space: nowrap;
+  white-space: nowrap;/*文本不换行*/
   -webkit-text-stroke-width: 0px;
 }
 
@@ -52,7 +52,7 @@ h1 span {
   font-size: 0px;
   height: 1000px;
   transition: all calc( var(--duration) * 0.7 ) var(--easing) 300ms;
-  -webkit-transform-origin: bottom center;
+  -webkit-transform-origin: bottom center;/*设置旋转元素的基本位点*/
           transform-origin: bottom center;
   -webkit-text-stroke-width: 4px;
 }
